Removed drop down lists

--- a/education.html
+++ b/education.html
@@ -89,7 +89,7 @@
 			<li><a href="https://formula-hybrid.org/">MSOE SAE Formula Hybrid</a></li>
 			<li><a href="https://www.asme.org/">MSOE American Society of Mechanical Engineers</a></li>
 		</ul>
-		<h5>University Scholars Honors Program</h5>>
+		<h5>University Scholars Honors Program</h5>
 		<p>I was chosen to participate in MSOE's <a
 				href="https://www.msoe.edu/admissions-aid/undergraduate-admissions/freshman-honors-program/">University
 				Scholars Honors Program</a> my freshman year. Through this program I worked on a project which aimed
@@ -171,6 +171,7 @@
 
 	<section class="has-internal-nav" id="online">
 		<h4><a href="https://www.edx.org">edX</a></h4>
+		<h5>edX Certificates</h5>
 		<ul>
 			<li><a href="https://courses.edx.org/certificates/d4fb9459e991435f8ba73c7ca6bf7ab0">Introduction to
 					Aerospace Engineering: Astronautics and Human Spaceflight</a></li>
@@ -185,6 +186,7 @@
 
 	<section class="has-internal-nav bottom">
 		<h4><a href="https://www.coursera.org">Coursera</a></h4>
+		<h5>Coursera Certificates</h5>
 		<ul>
 			<li><a href="https://www.coursera.org/account/accomplishments/records/NLEWC2HXEUPE">Introduction to
 					HTML5</a></li>
