--- a/engineering.html
+++ b/engineering.html
@@ -1,106 +1,143 @@
 <!DOCTYPE html>
-<html lang = "en">
+<html lang="en">
 
 <head>
-	<meta charset = "UTF-8">
+	<meta charset="UTF-8">
 	<title>Engineering</title>
-	<script src = "https://use.fontawesome.com/6baa9c78e6.js"></script>
-	<link rel = "icon" type = "image/png" href = "images/kenzie-swinford-favicon.png"/>
-	<link rel = "stylesheet" href = "https://fonts.googleapis.com/css?family=Barlow|Electrolize">
-	<link rel = "stylesheet" href = "css/kenzie-swinford-default.css">
-	<link rel = "stylesheet" href = "css/kenzie-swinford-style.css">
+	<script src="https://use.fontawesome.com/6baa9c78e6.js"></script>
+	<link rel="icon" type="image/png" href="images/kenzie-swinford-favicon.png" />
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Barlow|Electrolize">
+	<link rel="stylesheet" href="css/kenzie-swinford-default.css">
+	<link rel="stylesheet" href="css/kenzie-swinford-style.css">
 </head>
 
 <body>
 	<header>
 		<h1>
-			<a href = "home.html">Kenzie <mark>Swinford</mark></a>
+			<a href="home.html">Kenzie <mark>Swinford</mark></a>
 		</h1>
-		<nav> 
-			<a href = "education.html">Education</a>
-			<a class = "current" href = "engineering.html">Engineering</a>
-			<a href = "art.html">Art</a>
-			<a href = "stem-outreach.html">Outreach</a>
-			<a href = "connect.html">Connect</a>
+		<nav>
+			<a href="education.html">Education</a>
+			<a class="current" href="engineering.html">Engineering</a>
+			<a href="art.html">Art</a>
+			<a href="stem-outreach.html">Outreach</a>
+			<a href="connect.html">Connect</a>
 		</nav>
 	</header>
 
-	<section class = "internal-head top">
+	<section class="internal-head top">
 		<h2>Engineering</h2>
 	</section>
 
-	<section class = "internal-nav">
-		<h3><a href = "engineering.html">Engineering</a></h3>
+	<section class="internal-nav">
+		<h3><a href="engineering.html">Engineering</a></h3>
 		<nav>
-			<a href = "#mechanical-engineering.html">Mechanical Engineering</a>
-			<a href = "#computer-science.html">Computer Science</a>
-			<a href = "#projects.html">Projects</a>
+			<a href="#mechanical-engineering.html">Mechanical Engineering</a>
+			<a href="#computer-science.html">Computer Science</a>
+			<a href="#projects.html">Projects</a>
 		</nav>
 	</section>
 
-	<section class = "has-internal-nav" id = "mechanical-engineering">
+	<section class="has-internal-nav" id="mechanical-engineering">
 		<h4>Mechanical Engineering</h4>
-		<p>The most unforgettable memory I have from my childhood is trying to stick Elmo stickers on my father's hot pink street rod. I remember my dad rushing over asking what I was doing, and when I told him I was trying to make his car "more pretty", he instead led me to his rusty truck. Together, we stuck Elmo stickers on the passenger side door where they remained for years until the Dakota's final days. This amusing event was just the beginning of my enthusiasm for the automobile.</p>
-		<p>Growing up, I went to car shows with my parents, watched NHRA drag racing with my dad, held flashlights while my father worked on his 1938 Dodge, and even continuted my interest for automotive design by teaching myself pinstriping. Over the years, my dad and I had frequent conversations about paint jobs, interior colors, grills, wheel design, and more, and on occasion I would ask about how some of the performance parts work. I had always thought of the mechanical components as confusing and did not think I would be able to understand. One day while we were talking, I asked my dad how an engine worked, and his explanation stuck with me. Even though I did not fully understand, I found it fascinating that the components worked together to convert energy into motion. I decided to investigate careers that would allow me to continue exploring this interest, which is how I stumbled upon, and eventually chose, mechanical engineering.</p>
+		<p>The most unforgettable memory I have from my childhood is trying to stick Elmo stickers on my father's hot
+			pink street rod. I remember my dad rushing over asking what I was doing, and when I told him I was trying to
+			make his car "more pretty", he instead led me to his rusty truck. Together, we stuck Elmo stickers on the
+			passenger side door where they remained for years until the Dakota's final days. This amusing event was just
+			the beginning of my enthusiasm for the automobile.</p>
+		<p>Growing up, I went to car shows with my parents, watched NHRA drag racing with my dad, held flashlights while
+			my father worked on his 1938 Dodge, and even continuted my interest for automotive design by teaching myself
+			pinstriping. Over the years, my dad and I had frequent conversations about paint jobs, interior colors,
+			grills, wheel design, and more, and on occasion I would ask about how some of the performance parts work. I
+			had always thought of the mechanical components as confusing and did not think I would be able to
+			understand. One day while we were talking, I asked my dad how an engine worked, and his explanation stuck
+			with me. Even though I did not fully understand, I found it fascinating that the components worked together
+			to convert energy into motion. I decided to investigate careers that would allow me to continue exploring
+			this interest, which is how I stumbled upon, and eventually chose, mechanical engineering.</p>
 	</section>
 
-	<section class = "has-internal-nav" id = "computer-science">
+	<section class="has-internal-nav" id="computer-science">
 		<h4>Computer Science</h4>
-		<p>I had settled on mechanical engineering by the beginning of my senior year. Since cars are what sparked my interest in the first place, I wanted to take Automotive Awareness to learn more about how the vehicle works. However, the class did not fit into my schedule. I was bummed, but I decided to fill that credit with an online class, Foundations of Computer Programming. It sounding engineering related, so even though I had no idea what computer programming was, I decided to give it a go. I finished both semesters in less than one semester and enjoyed every second of it. The following semester I signed up for AP Computer Science online, and that only strengthened my interest. From that point on, I knew I wanted my career to involve computer science, but I also still wanted to do mechanical engineering. I kept my major as mechanical engineering, but during my freshman year at MSOE, I took Introduction to Mechatronics where I learned about the intersection of mechanical engineering and computer programming. That trimester I submitted a request to add computer science as a second major.</p>
+		<p>I had settled on mechanical engineering by the beginning of my senior year. Since cars are what sparked my
+			interest in the first place, I wanted to take Automotive Awareness to learn more about how the vehicle
+			works. However, the class did not fit into my schedule. I was bummed, but I decided to fill that credit with
+			an online class, Foundations of Computer Programming. It sounding engineering related, so even though I had
+			no idea what computer programming was, I decided to give it a go. I finished both semesters in less than one
+			semester and enjoyed every second of it. The following semester I signed up for AP Computer Science online,
+			and that only strengthened my interest. From that point on, I knew I wanted my career to involve computer
+			science, but I also still wanted to do mechanical engineering. I kept my major as mechanical engineering,
+			but during my freshman year at MSOE, I took Introduction to Mechatronics where I learned about the
+			intersection of mechanical engineering and computer programming. That trimester I submitted a request to add
+			computer science as a second major.</p>
 	</section>
 
-	<section class = "has-internal-nav bottom" id = "projects">
+	<section class="has-internal-nav bottom" id="projects">
 		<h4>Projects</h4>
-		<details>
-			<summary><a href = "https://youtu.be/Hybe7OJD1oQ">Robotic Arm with Force Sensor</a></summary>
-			<p>Designed and programmed a 3-axis robotic arm to move horizontally into a force sensing resistor with NeoPixels displaying the ratio of force to the user's desired maximum force.</p>
-			<ul>
-				<li>Wrote a <a href = "https://docs.google.com/document/d/1cJ4wLexerCZEbLHzqbP1r7zL_NdwQ7oOsfYXKsVMo7k/edit?usp=sharing">project proposal</a> outlining all hardware componenets and why they were added to the project</li>
-				<li>Designed a 3-axis robotic arm in SolidWorks and 3D printed it with Cura software and an Ender 3 Pro 3D printer</li>
-				<li>Programmed the robotic arm with MATLAB so that its top segment moved into a force sensor with potentiometer input</li>
-				<li>Programmed NeoPixels to display the force into the sensor related to the user's maximum force</li>
-				<li>Programmed switches to pause, restart, or shutdown the system</li>
-			</ul>
-		</details>
-		<details>
-			<summary><a href = "https://grabcad.com/library/hp-cs-iwata-eclipse-airbrush-1">Iwata Eclipse HP-CS Airbrush SolidWorks Model</a></summary>
-			<p>With a team of 3 members, took apart an airbrush and created SolidWorks models for each component and an assembly model with animation to show how it is put together.</p>
-			<ul>
-				<li>Took apart the airbrush to inspect all parts and see how the airbrush functioned, and divided the parts evenly amongst team members after creating a schedule for the project</li>
-				<li>Created SolidWorks models of assigned parts, making sure to discuss dimensions with teammates so that the parts aligned</li>
-				<li>Created SolidWorks assembly of all parts and added animation to demonstrate how the airbrush fit together</li>
-			</ul>
-		</details>
-		<details>
-			<summary>NASA RMC Lunabotics Lunar Mining Robot</summary>
-			<p>With approximately 30 team members, worked on the drivetrain and frontend system of a lunar mining robot that would compete against other robots at the NASA Kennedy Space Center.</p>
-			<ul>
-				<li>Designed a part in SolidWorks t omoutn the shaft of the hoverboard wheels to the robot chassis</li>
-				<li>Studied an old model of the hoverboard wheel covers and redesigned them to keep the same treads but restructure the enclosure so that they could come off when testing indoors and be put back on without having to take the wheels off the robot</li>
-				<li>Currently working with the controls team to develop the frontend system of the robot</li>
-				<li>In the process of learning Angular by working through Angular's Tour of Heroes Tutorial</li>
-			</ul>
-		</details>
-		<details>
-			<summary>Automated Plant Watering System</summary>
-			<p>Currently designing a system that automatically waters my plants when a soil moisture sensor senses that the soil is too dry.</p>
-			<ul>
-				<li>Brainstormed different solutions for the problem, and researched different sensors I woudl need</li>
-				<li>Decided on a final idea to have a pump pump a specific volume of water from a container and through a liquid level sensor into the plants</li>
-				<li>Currently designing the physical system, experimenting with the sensors, and writing the system's pseudocode</li>
-			</ul>
-		</details>
-		<details>
-			<summary>Web Design</summary>
-			<p>Currently learning web design through Coursera courses and applying my knowledge to this website.</p>
-		</details>
+		<h5>Roboitc Arm with Force Sensor</h5>
+		<p>Designed and programmed a 3-axis robotic arm to move horizontally into a force sensing resistor with
+			NeoPixels displaying the ratio of force to the user's desired maximum force.</p>
+		<ul>
+			<li>Wrote a <a
+					href="https://docs.google.com/document/d/1cJ4wLexerCZEbLHzqbP1r7zL_NdwQ7oOsfYXKsVMo7k/edit?usp=sharing">project
+					proposal</a> outlining all hardware componenets and why they were added to the project</li>
+			<li>Designed a 3-axis robotic arm in SolidWorks and 3D printed it with Cura software and an Ender 3 Pro 3D
+				printer</li>
+			<li>Programmed the robotic arm with MATLAB so that its top segment moved into a force sensor with
+				potentiometer input</li>
+			<li>Programmed NeoPixels to display the force into the sensor related to the user's maximum force</li>
+			<li>Programmed switches to pause, restart, or shutdown the system</li>
+		</ul>
+		<br>
+		<p><a href="https://youtu.be/Hybe7OJD1oQ">Robotic Arm with Force Sensor Explanation Video</a></p>
+		<br>
+		<h5>Iwata Eclipse HP-CS Airbrush SolidWorks Model</h5>
+		<p>With a team of 3 members, took apart an airbrush and created SolidWorks models for each component and an
+			assembly model with animation to show how it is put together.</p>
+		<ul>
+			<li>Took apart the airbrush to inspect all parts and see how the airbrush functioned, and divided the parts
+				evenly amongst team members after creating a schedule for the project</li>
+			<li>Created SolidWorks models of assigned parts, making sure to discuss dimensions with teammates so that
+				the parts aligned</li>
+			<li>Created SolidWorks assembly of all parts and added animation to demonstrate how the airbrush fit
+				together</li>
+		</ul>
+		<br>
+		<p><a href="https://grabcad.com/library/hp-cs-iwata-eclipse-airbrush-1">Iwata Eclipse HP-CS Airbrush SolidWorks
+				Model</a></p>
+		<br>
+		<h5>MSOE NASA RMC Lunabotics Lunar Mining Robot</h5>
+		<p>With approximately 30 team members, worked on the drivetrain and frontend system of a lunar mining robot that
+			would compete against other robots at the NASA Kennedy Space Center.</p>
+		<ul>
+			<li>Designed a part in SolidWorks t omoutn the shaft of the hoverboard wheels to the robot chassis</li>
+			<li>Studied an old model of the hoverboard wheel covers and redesigned them to keep the same treads but
+				restructure the enclosure so that they could come off when testing indoors and be put back on without
+				having to take the wheels off the robot</li>
+			<li>Currently working with the controls team to develop the frontend system of the robot</li>
+			<li>In the process of learning Angular by working through Angular's Tour of Heroes Tutorial</li>
+		</ul>
+		<br>
+		<h5>Automated Plant Watering System</h5>
+		<p>Currently designing a system that automatically waters my plants when a soil moisture sensor senses that the
+			soil is too dry.</p>
+		<ul>
+			<li>Brainstormed different solutions for the problem, and researched different sensors I woudl need</li>
+			<li>Decided on a final idea to have a pump pump a specific volume of water from a container and through a
+				liquid level sensor into the plants</li>
+			<li>Currently designing the physical system, experimenting with the sensors, and writing the system's
+				pseudocode</li>
+		</ul>
+		<br>
+		<h5>Web Design</h5>
+		<p>Currently learning web design through Coursera courses and applying my knowledge to this website.</p>
 	</section>
 
 	<footer>
 		<p>Kenzie Swinford
-			<a href = "https://www.linkedin.com/in/kenzie-swinford" aria-label = "LinkedIn"><i class = "fa fa-linkedin fa-xs"></i></a>
-			<a href = "https://www.github.com/ken-zie" aria-label = "Github"><i class = "fa fa-github fa-xs"></i></a>
-			<a href = "#top">Back to Top</a>
+			<a href="https://www.linkedin.com/in/kenzie-swinford" aria-label="LinkedIn"><i
+					class="fa fa-linkedin fa-xs"></i></a>
+			<a href="https://www.github.com/ken-zie" aria-label="Github"><i class="fa fa-github fa-xs"></i></a>
+			<a href="#top">Back to Top</a>
 		</p>
 	</footer>
 </body>
