Changed Webpage Titles

--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset = "UTF-8">
-	<title>Kenzie Swinford</title>
+	<title>HOME | Kenzie Swinford</title>
 	<script src = "https://use.fontawesome.com/6baa9c78e6.js"></script>
 	<link rel = "icon" type = "image/png" href = "images/kenzie-swinford-favicon.png"/>
 	<link rel = "stylesheet" href = "https://fonts.googleapis.com/css?family=Barlow|Electrolize">
