--- a/home.html
+++ b/home.html
@@ -31,7 +31,7 @@
 			<img src = "images/kenzie-swinford-image-removebg.png" alt = "Kenzie Swinford">
 		</figure>
 		<p>I created this website during the COVID-19 pandemic because my summer internship was cancelled and I wanted a project to work on. 
-			Prior to creating this website I had zero web design experience and was learning HTML through Coursera. 
+			Prior to creating this website, I had zero web design experience and was learning HTML through Coursera. 
 			I am using this page to apply what I learn through these courses.<br><br></p>
 		<p>I am a first generation college student studying mechanical engineering and computer science at the Milwaukee School of Engineering. 
 			In my spare time I enjoy creating mini engineering projects and practicing my art. 
